--- a/src/pages/sta/introduction.astro
+++ b/src/pages/sta/introduction.astro
@@ -17,7 +17,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
     <ul class='list-group list-group-flush py-0'> 
         <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#newtons_laws'>Newton's laws</a>
             <ul class='list-group list-group-flush py-0'> 
-                <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#newtons_first_law'>Newton's First Law</a></li> 
+                <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#newtons_mass_and_energy_balances'>Newton's First Law</a></li> 
                 <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#newtons_second_law'>Newton's Second Law</a></li> 
                 <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#newtons_third_law'>Newton's Third Law</a></li> 
                 <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#example'>Example</a></li> 
@@ -41,7 +41,7 @@ Newton's equations relate the acceleration <InlineEquation equation='\\vec{a}' /
 
 </SubSection>
 
-<SubSubSection title="Newton's First Law" id="newtons_first_law">
+<SubSubSection title="Newton's First Law" id="newtons_mass_and_energy_balances">
 
 A particle at rest stays that way unless acted on by unbalanced forces. 
 
