--- a/src/pages/thermodynamics/heat_and_work.astro
+++ b/src/pages/thermodynamics/heat_and_work.astro
@@ -12,7 +12,7 @@ import Itemize from "../../components/Itemize.astro"
 import InlineEquation from "../../components/InlineEquation.astro" 
 import DisplayEquation from "../../components/DisplayEquation.astro" 
 ---
-<Layout title="Heat and Work">
+<Layout title="Energy Transfers">
 <Section title="Energy Transfers">
 <p>When mass does not flow into or out of a system, the energy of the system changes in only two ways, through the loss or addition of <strong>work</strong> and/or <strong>heat</strong>.</p>
 <p>
