--- a/src/pages/thermodynamics/thermodynamic_devices.astro
+++ b/src/pages/thermodynamics/thermodynamic_devices.astro
@@ -11,28 +11,33 @@ import Itemize from "../../components/Itemize.astro"
 import DisplayEquation from "../../components/DisplayEquation.astro" 
 ---
 <Layout title="Thermodynamic devices">
-<Section title="">Thermodynamic Devices</Section>
-<SubSection title="">Nozzle</SubSection>
-<p>A flow passage that uses changes in cross-sectional area to increase the velocity (at the expense of pressure) of a fluid in the</p>
-<p>direction of flow. (narrows)</p>
+<Section title="Thermodynamic Devices"></Section>
+<SubSection title="Nozzle">
+<p>A flow passage that uses changes in cross-sectional area to increase the velocity (at the expense of pressure) of a fluid in the direction of flow. (narrows)</p>
 
-<SubSection title="">Diffuser</SubSection>
-<p>A flow passage that uses changes in cross-sectional area to decrease the velocity of a fluid and increase its pressure in the</p>
-<p>direction of flow. (narrows)</p>
+</SubSection>
 
-<SubSection title="">Turbine</SubSection>
-<p>A device for generating power as a result of the flow of fluid through it. Flow forces a set of blades to rotate a shaft via</p>
-<p>which work is output.</p>
+<SubSection title="Diffuser">
+<p>A flow passage that uses changes in cross-sectional area to decrease the velocity of a fluid and increase its pressure in the direction of flow. (narrows)</p>
+</SubSection>
 
-<SubSection title="">Compressor</SubSection>
+<SubSection title="Turbine">
+<p>A device for generating power as a result of the flow of fluid through it. Flow forces a set of blades to rotate a shaft via which work is output.</p>
+</SubSection>
+
+<SubSection title="Compressor">
 <p>The reverse of a turbine. Work is input into the device in order to change the state of a gas in such a way as to make it flow (by an increase in its pressure).</p>
+</SubSection>
 
-<SubSection title="">Pump</SubSection>
+<SubSection title="Pump">
 <p>Similar to a compressor. Work is input into the device in order to change the state of a liquid in such a way as to make it flow (by an increase in its pressure or elevation).</p>
+</SubSection>
 
-<SubSection title="">Throttling device</SubSection>
+<SubSection title="Throttling device">
 <p>A device used to reduce the pressure of a flow. Enthalpy of the working fluid can be approximated as constant.(narrows)</p>
+</SubSection>
 
-<SubSection title="">Heat Exchanger</SubSection>
-A device for transferring heat from one fluid substance to another.
+<SubSection title="Heat Exchanger">
+<p>A device for transferring heat from one fluid substance to another.</p>
+</SubSection>
 </Layout>
