--- a/src/pages/thermodynamics/thermodynamic_systems.astro
+++ b/src/pages/thermodynamics/thermodynamic_systems.astro
@@ -202,11 +202,11 @@ As mass flows into a system, energy increases by the addition of both the intern
 <p>
 A mass flow having rate <InlineEquation equation="\\dot{m}" /> with cross-sectional area, <InlineEquation equation="A" />, <u>slowly</u> enters a system. The mass is at a pressure <InlineEquation equation="p" />, has a specific volume <InlineEquation equation="v" />, and has a specific internal energy, <InlineEquation equation="u" />, relative to some reference state.</p>
 <p>The mass flows into the system, over a given time interval <InlineEquation equation="\\Delta t" />, increasing the internal energy of the system as it enters, by:</p>
-<DisplayEquation equation='\\dot{m}\\Delta t u=mu.' title="eqn:Deltau_dotm" />
+<DisplayEquation equation='\\dot{m}\\Delta t u=mu.' id="Deltau_dotm" title="Mass-flow & internal energy relationship" background="True"/>
 <p>
 The volume occupied by the portion of the stream entering a system is defined by,</p>
-<DisplayEquation equation='V_{\\text{in-flow}}=\\dot{m}\\Delta t v=mv' title="" />
-<p>This volume is pushed at constant pressure, <InlineEquation equation="p" />, into the system, is doing <InlineEquation equation="pV" /> work on the system, which will be described further in section <OrangeText>sec:pvwork</OrangeText>.
+<DisplayEquation equation='V_{\\text{in-flow}}=\\dot{m}\\Delta t v=mv' title="Volume in-flow" background="True" />
+<p>This volume is pushed at constant pressure, <InlineEquation equation="p" />, into the system, is doing <InlineEquation equation="pV" /> work on the system, which will be described further in section <a href="/thermodynamics/heat_and_work#pvwork-section">\(pV\) work</a>.
 </p>
 </SubSubSection>
 <SubSection title="Energy and Energy Flow"></SubSection>
@@ -282,11 +282,12 @@ Given the system shown in <a href="#SysSchematic1">Figure 4</a>, the net work do
 
 <SubSubSection title="Enthalpy">
 <p>Enthalpy is a state function that is the sum of a system's internal energy <InlineEquation equation="\\mu" /> and the product of its pressure and volume <InlineEquation equation="pv" />.</p>
-<h4><strong>Relative Specific Enthalpy</strong></h4>
-<p><p>The sum <InlineEquation equation="u+pv" /> appears frequently in thermodynamic discussion so it is conveniently defined as relative specific enthalpy <InlineEquation equation="h" />, consisting of the same atomic and molecular kinetic and potential energies as specific internal energy <InlineEquation equation="u" />, but with the addition of 
 
-<strong>flow work</strong>, <InlineEquation equation="pv" /></p>
-<DisplayEquation equation='h=u+pv.' title="eqn:RelativeEnthalpy" />
+<h4><strong>Relative Specific Enthalpy</strong></h4>
+
+<p>The sum <InlineEquation equation="u+pv" /> appears frequently in thermodynamic discussion so it is conveniently defined as relative specific enthalpy <InlineEquation equation="h" />, consisting of the same atomic and molecular kinetic and potential energies as specific internal energy <InlineEquation equation="u" />, but with the addition of <strong>flow work</strong>, <InlineEquation equation="pv" /></p>
+
+<DisplayEquation equation='h=u+pv.' id="RelativeEnthalpy" title="Relative enthalpy" background="True"/>
 </SubSubSection>
 
 <SubSubSection title="Entropy">
