--- a/src/pages/thermodynamics.astro
+++ b/src/pages/thermodynamics.astro
@@ -18,10 +18,9 @@ import "../../public/static/css/course_home_pages.css"
       <li><a href="/thermodynamics/thermodynamic_systems?origin=coursemenu">Thermodynamic Systems</a></li>
       <li><a href="/thermodynamics/substances?origin=coursemenu">Substances</a></li>
       <li><a href="/thermodynamics/heat_and_work?origin=coursemenu">Heat and Work</a></li>
-      <li><a href="/thermodynamics/first_law?origin=coursemenu">First Law</a></li>
+      <li><a href="/thermodynamics/mass_and_energy_balances?origin=coursemenu">Mass and Energy Balances</a></li>
       <li><a href="/thermodynamics/complex_problems?origin=coursemenu">Complex Problems</a></li>
       <li><a href="/thermodynamics/thermodynamic_devices?origin=coursemenu">Thermodynamic devices</a></li>
-      <li><a href="/thermodynamics/second_law?origin=coursemenu">Second Law</a></li>
       <li><a href="/thermodynamics/entropy?origin=coursemenu">Entropy</a></li>
       <li><a href="/thermodynamics/cycles?origin=coursemenu">Cycles</a></li>
     </ol>    
